<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/pocketTrack"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="58dp"
        android:layout_height="74dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:contentDescription="@string/pocketTrackLogo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/questionnaire_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:labelFor="@+id/edtEmail"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/password"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:labelFor="@+id/edtPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewConfirmPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/confirmPassword"
            android:textColor="@color/text"
            android:textSize="16sp"
            android:labelFor="@+id/edtConfirmPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/text"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonSignup"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_background"
            android:text="@string/createAccount"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loginText"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/loginUnderlined"
            android:textColor="@color/text"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>