<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_background">

    <!--header-->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:padding="10dp"
        android:orientation="horizontal">


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/support"
            android:textColor="@color/text"
            android:textAlignment="center"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/ibProfileButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/profile_icon"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/profile_icon" />



    </LinearLayout>



    <!--body-->
    <ScrollView
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintBottom_toTopOf="@+id/nav"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:fillViewport="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/llBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/support_foreground"
            android:padding="10dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/investion_icon"
                    android:contentDescription="@string/bitcoin_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/investing"
                    android:textColor="@color/text"
                    android:gravity="center"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/btnExpandText0"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/arrow_downwards"
                    android:layout_marginRight="5dp"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:text="nothing Yet"
                    android:textColor="@color/text"/>

            </LinearLayout>


        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/support_foreground"
                android:padding="10dp"
                android:layout_marginBottom="20dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">


                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/saving_icon"
                        android:contentDescription="@string/bitcoin_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Saving"
                        android:textColor="@color/text"/>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>

                    <ImageButton
                        android:id="@+id/btnExpandText1"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/arrow_downwards"
                        android:layout_marginRight="5dp"
                        android:background="?attr/selectableItemBackgroundBorderless"/>



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:text="Nothing yet"
                        android:textColor="@color/text"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


    </ScrollView>




    <!--nav-->
    <LinearLayout
        android:id="@+id/nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nav_background"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp">

        <ImageView
            android:id="@+id/btnHomePage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/home_icon"
            android:contentDescription="@string/home_icon"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/btnGoalsPage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/goals_icon"
            android:contentDescription="@string/goals_icon"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:id="@+id/ibCalculatorsPage"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/money_icon"
            android:contentDescription="@string/money_icon"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/support_icon"
            android:contentDescription="@string/support_icon"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>